--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </script>
 
-    <link rel="import" href="/src/my-app.html">
+    <link rel="import" href="/src/slidetomator-shell.html">
 
     <style>
       body {
@@ -105,7 +105,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
   </head>
   <body>
-    <my-app></my-app>
+    <slidetomator-shell></slidetomator-shell>
     <!-- Built with love using Polymer Starter Kit -->
   </body>
 </html>
