--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -18,6 +18,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/app-route/app-location.html">
 <link rel="import" href="../bower_components/app-route/app-route.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="../bower_components/iron-a11y-keys/iron-a11y-keys.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animatable.html">
@@ -65,6 +66,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-weight: bold;
       }
     </style>
+    <iron-a11y-keys id="a11y" keys="left right" on-keys-pressed="_arrowPressed"></iron-a11y-keys>
 
     <app-location route="{{route}}"></app-location>
     <app-route
@@ -153,6 +155,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         this.$.slides.exitAnimation = "slide-left-animation";
         this.$.slides.selectNext();
         this.page = this.$.slides.selected;
+      },
+
+      _arrowPressed: function(e){
+        console.log(e)
       }
     });
   </script>
