--- a/src/my-view3.html
+++ b/src/my-view3.html
@@ -15,9 +15,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template>
     <style include="shared-styles">
       :host {
-        display: block;
-
-        padding: 10px;
+        @apply(--slide-styles);
       }
     </style>
 
