--- a/src/slide-1-title.html
+++ b/src/slide-1-title.html
@@ -11,7 +11,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="shared-styles.html">
 
-<dom-module id="my-view3">
+<link rel="import" href="slice-title.html">
+
+
+<dom-module id="slide-1-title">
   <template>
     <style include="shared-styles">
       :host {
@@ -20,16 +23,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
 
     <div class="card">
-      <div class="circle">3</div>
-      <h1>View Three</h1>
-      <p>Modus commodo minimum eum te, vero utinam assueverit per eu.</p>
-      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.Has at minim mucius aliquam, est id tempor laoreet.Pro saepe pertinax ei, ad pri animal labores suscipiantur.</p>
+      <slice-title title="Lorem Ipsum Kame Kame Ha!"></slice-title>
     </div>
   </template>
 
   <script>
     Polymer({
-      is: 'my-view3'
+      is: 'slide-1-title',
     });
   </script>
 </dom-module>
