--- a/src/slide-3-list.html
+++ b/src/slide-3-list.html
@@ -11,29 +11,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="shared-styles.html">
 
-<dom-module id="my-view2">
+<dom-module id="slide-3-list">
   <template>
     <style include="shared-styles">
       :host {
         @apply(--slide-styles);
       }
-
-      :host .card{
-        background-image: url('../images/syncrtc_bg.jpg');
-      }
     </style>
 
     <div class="card">
-      <div class="circle">2</div>
-      <h1>View Two</h1>
-      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.</p>
-      <p>Id nam odio natum malorum, tibique copiosae expetenda mel ea.Detracto suavitate repudiandae no eum. Id adhuc minim soluta nam.Id nam odio natum malorum, tibique copiosae expetenda mel ea.</p>
     </div>
   </template>
 
   <script>
     Polymer({
-      is: 'my-view2'
+      is: 'slide-3-list'
     });
   </script>
 </dom-module>
