--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -136,9 +136,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                   api-key="AIzaSyCIm-nW-uLagGIDkFACm_dXQ-hfS-EV6Z4">
     </firebase-app>
     
-    <firebase-document path="/currentPage"
+    <!--<firebase-document path="/currentPage"
                        data="{{page}}">
-    </firebase-document>
+    </firebase-document>-->
 
     <firebase-document path="/emotions/{{page}}/happy"
                        data="[[emotion]]">
