--- a/src/slide-1-title.html
+++ b/src/slide-1-title.html
@@ -12,6 +12,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="shared-styles.html">
 
 <link rel="import" href="slice-title.html">
+<link rel="import" href="slice-speaker.html">
 
 
 <dom-module id="slide-1-title">
@@ -24,6 +25,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card">
       <slice-title title="Lorem Ipsum Kame Kame Ha!"></slice-title>
+      <slice-speaker name="Victor Sanchez" twitter="VictorSanchez" avatar="../images/avatar.png"></slice-speaker>
+      <slice-speaker name="Gloria Bueno" twitter="globitss" avatar="../images/avatar.png"></slice-speaker>
     </div>
   </template>
 
