--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -93,12 +93,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <app-drawer-layout fullbleed force-narrow>
       <!-- Drawer content -->
       <app-drawer>
-        <app-toolbar>Menu</app-toolbar>
+        <app-toolbar>Table of contents</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="1-title" href="/1-title">View One</a>
-          <a name="2-imagetest" href="/2-imagetest">View Two</a>
-          <a name="3-list" href="/3-list">View Three</a>
-          <a name="4-samplecode" href="/4-samplecode">View Four</a>
+          <a name="1-title" href="/1-title">Title</a>
+          <a name="2-imagetest" href="/2-imagetest">Bg image test</a>
+          <a name="3-list" href="/3-list">List of fruits</a>
+          <a name="4-samplecode" href="/4-samplecode">Sample code</a>
         </iron-selector>
       </app-drawer>
 
