--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -19,6 +19,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/app-route/app-route.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/iron-a11y-keys/iron-a11y-keys.html">
+<link rel="import" href="../bower_components/paper-menu-button/paper-menu-button.html">
+<link rel="import" href="../bower_components/paper-menu/paper-menu.html">
+<link rel="import" href="../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animatable.html">
@@ -134,6 +137,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </neon-animatable>
         </neon-animated-pages>
       </app-header-layout>
+      
+      <paper-menu-button class$="{{emotion}}">
+        <paper-icon-button icon="menu" class="dropdown-trigger"></paper-icon-button>
+        <iron-selector selected="{{emotion}}" attr-for-selected="name" class="dropdown-content">
+          <paper-item name="smile">aaa</paper-item>
+          <paper-item name="neutro">bbb</paper-item>
+          <paper-item name="sad">cc</paper-item>
+        </iron-selector>
+      </paper-menu-button>
     </app-drawer-layout>
 
     <firebase-app auth-domain="slidetomator-6a36d.firebaseapp.com"
@@ -145,8 +157,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                        data="{{page}}">
     </firebase-document>-->
 
-    <firebase-document path="/emotions/{{page}}/happy"
-                       data="[[emotion]]">
+    <firebase-document path="/emotions/{{page}}/{{emotion}}"
+                       data="[[emotionCounter]]">
     </firebase-document>
   </template>
 
@@ -169,7 +181,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         },
         emotion:{
           type: Number,
-          reflectToAttribute: true,
+          value: 'smile',
+          observer: '_emotionChanged'
+        },
+        emotionCounter:{
+          type: Number,
           value: 0
         }
       },
@@ -188,13 +204,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       },
 
       _pageChanged: function(page) {
-        console.log(page)
-        // Load page import on demand. Show 404 page if fails
-        //console.log(this.emotion)
-          //      this.emotion = this.emotion + 3;
-
         var resolvedPageUrl = this.resolveUrl('slide-' + page + '.html');
         this.importHref(resolvedPageUrl, null, null, true);
+      },
+
+      _emotionChanged: function(emotion) {
+        this.emotionCounter =+ 1;
       },
 
       _previousSlide: function(){
