--- a/src/slide-1-title.html
+++ b/src/slide-1-title.html
@@ -13,18 +13,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="slice-title.html">
 
-
 <dom-module id="slide-1-title">
   <template>
     <style include="shared-styles">
       :host {
-        @apply(--slide-styles);
+        @apply(--flex);
       }
     </style>
 
-    <div class="card">
-      <slice-title title="Lorem Ipsum Kame Kame Ha!"></slice-title>
+    <div class="card" card-center>
+      <slice-title title="Lorem Ipsum Kame Kame Ha!" text-center></slice-title>
     </div>
+
   </template>
 
   <script>
