--- a/src/slice-code.html
+++ b/src/slice-code.html
@@ -5,10 +5,11 @@
   <template>
     <style>
       :host {
+        width: 100%;
       }
     </style>
 
-    <syntax-highlight theme="Arta" lang="html" >
+    <syntax-highlight theme="Arta" lang="html">
         <h1>lorem ipsum</h1>
         <script>
             console.log("this is a test");
