--- a/src/slide-1-title.html
+++ b/src/slide-1-title.html
@@ -24,8 +24,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card" card-center>
       <slice-title title="Lorem Ipsum Kame Kame Ha!" text-center></slice-title>
-      <slice-speaker name="Victor Sanchez" twitter="VictorSanchez" avatar="../images/avatar.png"></slice-speaker>
-      <slice-speaker name="Gloria Bueno" twitter="globitss" avatar="../images/avatar.png"></slice-speaker>
+      <vcard>
+        <slice-speaker name="Victor Sanchez" twitter="VictorSanchez" avatar="../images/avatar.png"></slice-speaker>
+        <slice-speaker name="Gloria Bueno" twitter="globitss" avatar="../images/avatar.png"></slice-speaker>
+      </vcard>
     </div>
 
   </template>
