--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -139,7 +139,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </app-header-layout>
       
       <template is='dom-if' if="{{viewer}}" >
-        <paper-menu-button class$="{{emotion}}">
+        <paper-menu-button style="position: absolute; left: 50px; bottom: 50px; class$="{{emotion}}">
           <paper-icon-button icon="menu" class="dropdown-trigger"></paper-icon-button>
           <iron-selector selected="{{emotion}}" attr-for-selected="name" class="dropdown-content">
             <paper-item name="smile">aaa</paper-item>
