emoticons text labels

--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -142,9 +142,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <paper-menu-button style="position: absolute; left: 50px; bottom: 50px; class$="{{emotion}}">
           <paper-icon-button icon="menu" class="dropdown-trigger"></paper-icon-button>
           <iron-selector selected="{{emotion}}" attr-for-selected="name" class="dropdown-content">
-            <paper-item name="smile">aaa</paper-item>
-            <paper-item name="neutro">bbb</paper-item>
-            <paper-item name="sad">cc</paper-item>
+            <paper-item name="smile">smile</paper-item>
+            <paper-item name="neutro">ni fu ni fa</paper-item>
+            <paper-item name="sad">sad</paper-item>
           </iron-selector>
         </paper-menu-button>
       </template>
