--- a/src/slice-imgbg.html
+++ b/src/slice-imgbg.html
@@ -19,7 +19,7 @@
           img:{
               type: String,
               reflectToAttribute: true,
-              value: "../images/syncrtc_bg.jpg"
+              value: "../images/dummy-img.jpg"
           }
       }
     });
