--- a/src/slide-2-imagetest.html
+++ b/src/slide-2-imagetest.html
@@ -29,15 +29,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         ::shadow h1 {
 
             /* font */
-            font-size: calc(var(--font-size-base)*8);
-            text-shadow: 3px 3px 0 rgba(255,255,255,.7);
+            color:var(--white);
+            font-family: var(--font-family-type1);
         }
 
     </style>
 
-    <div class="card" card-top>
+    <div class="card" card-center>
       <slice-title title="Lorem Ipsum Kame Kame Ha!" text-center></slice-title>
-      <slice-imgbg src="../images/syncrtc_bg.jpg"></slice-imgbg>
+      <slice-imgbg src="../images/dummy-img.jpg"></slice-imgbg>
     </div>
   </template>
 
