--- a/src/slide-1-title.html
+++ b/src/slide-1-title.html
@@ -22,10 +22,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
 
-    <div class="card" card-center>
-      <slice-title title="Lorem Ipsum Kame Kame Ha!" text-center></slice-title>
-      <slice-speaker name="Victor Sanchez" twitter="VictorSanchez" avatar="../images/victor.png"></slice-speaker>
-      <slice-speaker name="Gloria Bueno" twitter="globitss" avatar="../images/gloria.png"></slice-speaker>
+    <div class="card" card-top>
+      <slice-title title="Ponentes" text-left></slice-title>
+      <vcard>
+        <slice-speaker name="Victor Sanchez" twitter="VictorSanchez" avatar="../images/victor.png"></slice-speaker>
+        <slice-speaker name="Gloria Bueno" twitter="globitss" avatar="../images/gloria.png"></slice-speaker>
+      </vcard>
     </div>
 
   </template>
